update book table rendering logic and remove hardcoded entries

--- a/index.html
+++ b/index.html
@@ -12,22 +12,7 @@
             <th>Price</th>
             <th>Actions</th>
         </tr>
-        <tbody>
-            <tr class="book">
-                <td>The adventures of Lori Ipsi</td>
-                <td>120</td>
-                <td><span>Read</span> <span>update</span> <span>delete</span></td>
-            </tr>
-            <tr class="book">
-                <td>World atlas</td>
-                <td>300</td>
-                <td><span>Read</span> <span>update</span> <span>delete</span></td>
-            </tr>
-            <tr class="book">
-                <td>Zorba the greek</td>
-                <td>87</td>
-                <td><span>Read</span> <span>update</span> <span>delete</span></td>
-            </tr>
+        <tbody class="book-list">
         </tbody>
     </table>
     <script src="js/book.service.js"></script>
