--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Shop</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body onload="onInit()">
-    <table>
-        <tr>
+    <table class="book-table">
+        <tr class="header">
             <th>Title</th>
             <th>Price</th>
             <th>Actions</th>
