improve book management logic and add local storage functionality

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Book Shop</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<body onload="onInit()">
+<body onload="onInit()" onsubmit="">
     <button class="add-book" onclick="onAddBook()">Add Book</button>
     <table class="book-table">
         <tr class="header">
@@ -27,6 +27,7 @@
     </dialog>
     <script src="js/book.service.js"></script>
     <script src="js/book.controller.js"></script>
+    <script src="js/local,storage.js"></script>
 
 </body>
 </html>
