--- a/index.html
+++ b/index.html
@@ -36,10 +36,16 @@
                 <tbody class="book-list">
                 </tbody>
             </table>        
-            </div>    
-
-
-
+            </div> 
+            
+            <footer class="footer">
+                <p class="footer-text">Book Shop - All rights reserved &copy; 2025</p>
+                <div class="footer-stats">
+                    <p class="expensive-books">Expensive Books: <span class="expensive-books-count"></span></p>
+                    <p class="average-books">Average Books: <span class="average-books-count"></span></p>
+                    <p class="cheap-books">Cheap Books: <span class="cheap-books-count"></span></p>
+                </div>
+            </footer>
 
         <dialog class="book-details-modal">
             <form method="dialog">
