book management logic and enhance UI with table structure and styling improvements

--- a/index.html
+++ b/index.html
@@ -26,18 +26,18 @@
 
 
             <table class="book-table">
-                <tr class="table-header">
+                <thead>
+                    <tr class="table-header">
                     <th>Title</th>
                     <th>Price</th>
                     <th>Actions</th>
                 </tr>
-
-
-                <tbody class="book-list">
-                </tbody>
+                </thead>
+        
+                <tbody class="book-list"></tbody>
             </table>        
             </div> 
-            
+
             <footer class="footer">
                 <p class="footer-text">Book Shop - All rights reserved &copy; 2025</p>
                 <div class="footer-stats">
