book management UI with improved styling, additional book details, and new book images

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <thead>
                     <tr class="table-header">
                     <th>Title</th>
-                    <th>Price</th>
+                    <th>Price ($)</th>
                     <th>Actions</th>
                 </tr>
                 </thead>
@@ -49,8 +49,9 @@
 
         <dialog class="book-details-modal">
             <form method="dialog">
-                <h2 class="dialog-title">More Details About The Book</h2>    
-                <pre></pre>
+                <h2 class="dialog-title">More Details About The Book</h2>
+                <div class="dialog-content"></div>    
+                
                 <button class="close-modal">X</button>
             </form>
         </dialog>
