add book rating feature with UI updates and utility functions

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <tr class="table-header">
                     <th>Title</th>
                     <th>Price ($)</th>
+                    <th>Rating (1-5)</th>
                     <th>Actions</th>
                 </tr>
                 </thead>
@@ -67,6 +68,7 @@
         <script src="js/book.service.js"></script>
         <script src="js/book.controller.js"></script>
         <script src="js/local,storage.js"></script>
+        <script src="js/utils.js"></script>
 
     </body>
     </html>
