add sorting functionality with direction toggle in book management UI

--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
                     <input class="input-rating" type="range" min=0 max=5 value=0 oninput="onSearch(this)"></input>
                 </label>
                 <label for="select">Sort by:
-                    <select class="sort" onchange="onSortBy(this)">
+                    <select class="sort" onchange="onSortBy()">
                         <option value="all">All</option>
                         <option value="title">Title</option>
                         <option value="rating">Rating</option>
                         <option value="price">Price</option>
                     </select>
+
+                    <span>Deccending</span>
+                    <input class="sort-dir" type="checkbox" oninput="onSortBy()" >
+                    
 
                 </label>
                 <button class="add-book" onclick="onAddBook()">Add Book</button>
